--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,13 +9,22 @@
 			"name": "Run Extension",
 			"type": "extensionHost",
 			"request": "launch",
-			"args": [
-				"--extensionDevelopmentPath=${workspaceFolder}"
-			],
-			"outFiles": [
-				"${workspaceFolder}/out/**/*.js"
-			],
+			"args": ["--extensionDevelopmentPath=${workspaceFolder}"],
+			"outFiles": ["${workspaceFolder}/dist/**/*.js"],
 			"preLaunchTask": "${defaultBuildTask}",
+			"sourceMaps": true,
+			"smartStep": true
+		},
+		{
+			"name": "Extension (Test Mode)",
+			"type": "extensionHost",
+			"request": "launch",
+			"env": {
+				"NODE_ENV": "test",
+				"REWST_MOCK": "true"
+			},
+			"args": ["--extensionDevelopmentPath=${workspaceFolder}"],
+			"outFiles": ["${workspaceFolder}/dist/**/*.js"],
 			"sourceMaps": true,
 			"smartStep": true
 		}
