--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,12 +14,30 @@
 	"typescript.tsc.autoDetect": "off",
 	"typescript.tsdk": "node_modules/typescript/lib",
 	"typescript.enablePromptUseWorkspaceTsdk": true,
+	// Editor formatting settings
+	"editor.insertSpaces": false,
+	"editor.tabSize": 4,
+	"editor.detectIndentation": false,
+	"editor.formatOnSave": true,
+	"editor.defaultFormatter": "esbenp.prettier-vscode",
 	"editor.codeActionsOnSave": {
-		"source.fixAll.eslint": "always"
+		"source.fixAll.eslint": "always",
+		"source.organizeImports": "explicit"
 	},
-	"eslint.format.enable": true,
-	"eslint.validate": [
-		"javascript",
-		"typescript"
-	]
+	// Language-specific settings
+	"[typescript]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	},
+	"[javascript]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	},
+	"[json]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	},
+	// Tool configuration
+	"eslint.format.enable": false,
+	"eslint.validate": ["javascript", "typescript"],
+	"prettier.configPath": ".prettierrc",
+	"prettier.requireConfig": true,
+	"git.allowNoVerifyCommit": true
 }
