--- a/package.json
+++ b/package.json
@@ -1,208 +1,168 @@
 {
-  "publisher": "JBramley",
-  "type": "module",
-  "name": "rewst-buddy",
-  "displayName": "rewst-buddy",
-  "description": "Buddy for Rewst",
-  "version": "0.0.1",
-  "engines": {
-    "vscode": "^1.100.0"
-  },
-  "categories": [
-    "Other"
-  ],
-  "keywords": [
-    "rewst",
-    "Rewst",
-    "buddy"
-  ],
-  "activationEvents": [
-    "onStartupFinished"
-  ],
-  "main": "./out/extension.js",
-  "contributes": {
-    "commands": [
-      {
-        "command": "rewst-buddy.NewClient",
-        "title": "Add Rewst Instance",
-        "icon": "$(plus)"
-      },
-      {
-        "command": "rewst-buddy.LoadClients",
-        "title": "Rewst LoadClients"
-      },
-      {
-        "command": "rewst-buddy.Rename",
-        "title": "Rename...",
-        "icon": "$(edit)"
-      },
-      {
-        "command": "rewst-buddy.ClearProfiles",
-        "title": "Rewst ClearProfiles"
-      },
-      {
-        "command": "rewst-buddy.RefreshView",
-        "title": "Refresh",
-        "icon": "$(debug-restart)"
-      },
-      {
-        "command": "rewst-buddy.SaveFolderStructure",
-        "title": "Save Folder Structure",
-        "icon": "$(save)"
-      },
-      {
-        "command": "rewst-buddy.ReadTest",
-        "title": "ReadTest"
-      },
-      {
-        "command": "rewst-buddy.CreateTemplateFolder",
-        "title": "Create Folder",
-        "icon": "$(file-directory-create)"
-      },
-      {
-        "command": "rewst-buddy.CreateTemplate",
-        "title": "Create Template",
-        "icon": "$(file-add)"
-      },
-      {
-        "command": "rewst-buddy.CopyId",
-        "title": "Copy ID"
-      },
-      {
-        "command": "rewst-buddy.DeleteTemplate",
-        "title": "Delete Template"
-      },
-      {
-        "command": "rewst-buddy.ChangeTemplateFiletypePowershell",
-        "title": "Powershell"
-      },
-      {
-        "command": "rewst-buddy.ChangeTemplateFiletypeHTML",
-        "title": "HTML"
-      },
-      {
-        "command": "rewst-buddy.ChangeTemplateFiletypeYAML",
-        "title": "YAML"
-      },
-      {
-        "command": "rewst-buddy.ChangeTemplateFiletypeCustom",
-        "title": "Custom"
-      }
-    ],
-    "views": {
-      "explorer": [
-        {
-          "id": "RewstView",
-          "name": "Rewst View",
-          "icon": "Rewst Buddy"
-        }
-      ]
-    },
-    "submenus": [
-      {
-        "id": "rewst-buddy.templateType",
-        "label": "Template Type"
-      }
-    ],
-    "menus": {
-      "rewst-buddy.templateType": [
-        {
-          "command": "rewst-buddy.ChangeTemplateFiletypePowershell"
-        },
-        {
-          "command": "rewst-buddy.ChangeTemplateFiletypeHTML"
-        },
-        {
-          "command": "rewst-buddy.ChangeTemplateFiletypeYAML"
-        },
-        {
-          "command": "rewst-buddy.ChangeTemplateFiletypeCustom"
-        }
-      ],
-      "view/title": [
-        {
-          "command": "rewst-buddy.RefreshView",
-          "group": "navigation"
-        },
-        {
-          "command": "rewst-buddy.NewClient",
-          "group": "navigation"
-        }
-      ],
-      "view/item/context": [
-        {
-          "command": "rewst-buddy.CopyId",
-          "group": "copy@00"
-        },
-        {
-          "command": "rewst-buddy.CreateTemplate",
-          "when": "viewItem =~ /has-templates/",
-          "group": "inline"
-        },
-        {
-          "command": "rewst-buddy.CreateTemplateFolder",
-          "when": "viewItem =~ /has-templatefolders/",
-          "group": "inline"
-        },
-        {
-          "command": "rewst-buddy.Rename",
-          "when": "viewItem =~ /renamable/",
-          "group": "inline"
-        },
-        {
-          "submenu": "rewst-buddy.templateType",
-          "when": "viewItem =~ /is-template/"
-        },
-        {
-          "command": "rewst-buddy.Rename",
-          "when": "viewItem =~ /renamable/",
-          "group": "fileops@10"
-        },
-        {
-          "command": "rewst-buddy.DeleteTemplate",
-          "when": "viewItem =~ /is-template/",
-          "group": "fileops@100"
-        }
-      ]
-    }
-  },
-  "scripts": {
-    "codegen": "graphql-codegen --config src/codegen.ts",
-    "lint": "eslint src",
-    "check-types": "tsc --noEmit --watch",
-    "minify": "node esbuild.js --production",
-    "test": "vscode-test",
-    "compile": "npm run check-types && node esbuild.js",
-    "watch": "npm-run-all -p watch:*",
-    "watch:esbuild": "node esbuild.js --watch",
-    "watch:tsc": "tsc --noEmit --watch --project tsconfig.json"
-  },
-  "devDependencies": {
-    "@0no-co/graphqlsp": "^1.12.16",
-    "@eslint/js": "^9.28.0",
-    "@graphql-codegen/cli": "^5.0.6",
-    "@graphql-codegen/client-preset": "^4.8.1",
-    "@graphql-codegen/schema-ast": "^4.1.0",
-    "@graphql-codegen/typescript": "^4.1.6",
-    "@graphql-codegen/typescript-graphql-request": "^6.2.1",
-    "@graphql-codegen/typescript-operations": "^4.6.1",
-    "@parcel/watcher": "^2.5.1",
-    "@types/mocha": "^10.0.10",
-    "@types/node": "^20.17.51",
-    "@types/vscode": "^1.100.0",
-    "@typescript-eslint/eslint-plugin": "^8.33.0",
-    "@typescript-eslint/parser": "^8.33.0",
-    "@vscode/test-cli": "^0.0.10",
-    "@vscode/test-electron": "^2.5.2",
-    "esbuild": "^0.25.5",
-    "eslint": "^9.28.0",
-    "globals": "^16.2.0",
-    "graphql": "^16.11.0",
-    "graphql-request": "^7.1.2",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.33.0"
-  },
-  "dependencies": {
-    "uuidv7": "^1.0.2"
-  }
+	"publisher": "JBramley",
+	"name": "rewst-buddy",
+	"displayName": "rewst-buddy",
+	"description": "Buddy for Rewst (Templates)",
+	"version": "0.11.0",
+	"engines": {
+		"vscode": "^1.107.0"
+	},
+	"categories": [
+		"Other"
+	],
+	"repository": {
+		"type": "git",
+		"url": "git@github.com:Brostash/rewst-buddy.git"
+	},
+	"bugs": {
+		"url": "https://github.com/Brostash/rewst-buddy/issues"
+	},
+	"license": "MIT",
+	"homepage": "https://github.com/Brostash/rewst-buddy/blob/master/README.md",
+	"keywords": [
+		"rewst",
+		"Rewst",
+		"buddy"
+	],
+	"activationEvents": [
+		"onStartupFinished"
+	],
+	"main": "./dist/extension.js",
+	"contributes": {
+		"configuration": {
+			"title": "Settings Editor Rewst-Buddy",
+			"type": "object",
+			"properties": {
+				"rewst-buddy.regions": {
+					"type": "array",
+					"default": [
+						{
+							"name": "North America",
+							"cookieName": "appSession",
+							"graphqlUrl": "https://api.rewst.io/graphql",
+							"loginUrl": "https://app.rewst.io"
+						}
+					],
+					"description": "Regional configuration for different Rewst instances",
+					"items": {
+						"type": "object",
+						"properties": {
+							"name": {
+								"type": "string",
+								"description": "Display name for the region"
+							},
+							"cookieName": {
+								"type": "string",
+								"description": "Session cookie name for authentication"
+							},
+							"graphqlUrl": {
+								"type": "string",
+								"description": "GraphQL API endpoint URL"
+							},
+							"loginUrl": {
+								"type": "string",
+								"description": "Login page URL for the region"
+							}
+						},
+						"required": [
+							"name",
+							"cookieName",
+							"graphqlUrl",
+							"loginUrl"
+						]
+					}
+				}
+			}
+		},
+		"commands": [
+			{
+				"command": "rewst-buddy.NewSession",
+				"title": "Rewst Buddy: Add Rewst Session",
+				"icon": "$(plus)"
+			},
+			{
+				"command": "rewst-buddy.CreateTemplate",
+				"title": "Rewst Buddy: Create Template",
+				"icon": "$(file-add)"
+			},
+			{
+				"command": "rewst-buddy.SyncTemplate",
+				"title": "Rewst Buddy: Sync Template",
+				"icon": "$(sync)"
+			},
+			{
+				"command": "rewst-buddy.LinkTemplate",
+				"title": "Rewst Buddy: Link Template",
+				"icon": "$(link-external)"
+			},
+			{
+				"command": "rewst-buddy.ClearSessions",
+				"title": "Rewst Buddy: Clear Sessions"
+			},
+			{
+				"command": "rewst-buddy.OpenTemplate",
+				"title": "Rewst Buddy: Open Template from URL"
+			},
+			{
+				"command": "rewst-buddy.ClearTemplateLinks",
+				"title": "Rewst Buddy: Clear Template Links"
+			}
+		],
+		"views": {},
+		"submenus": [],
+		"menus": {}
+	},
+	"scripts": {
+		"format:pretty": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\"",
+		"format:eslint": "eslint --fix src",
+		"format": "npm-run-all -p format:*",
+		"lint": "eslint src",
+		"type-check": "tsc --noEmit",
+		"codegen": "graphql-codegen --config src/codegen.ts",
+		"check-types": "tsc --noEmit --watch",
+		"test": "vscode-test",
+		"build": "npm run package",
+		"dev": "npm run watch",
+		"watch": "NODE_ENV=development npm-run-all -p watch:*",
+		"watch:tsc": "tsc --noEmit --watch --project tsconfig.json",
+		"watch:webpack": "NODE_ENV=development webpack --mode development --watch",
+		"compile": "NODE_ENV=development webpack --mode development",
+		"vscode:prepublish": "npm run package",
+		"package": "NODE_ENV=production webpack --mode production --devtool hidden-source-map"
+	},
+	"devDependencies": {
+		"@0no-co/graphqlsp": "^1.15.2",
+		"@eslint/js": "^9.39.2",
+		"@graphql-codegen/cli": "^6.1.0",
+		"@graphql-codegen/client-preset": "^5.2.1",
+		"@graphql-codegen/schema-ast": "^5.0.0",
+		"@graphql-codegen/typescript": "^5.0.6",
+		"@graphql-codegen/typescript-graphql-request": "^6.3.0",
+		"@graphql-codegen/typescript-operations": "^5.0.6",
+		"@parcel/watcher": "^2.5.1",
+		"@stylistic/eslint-plugin": "^5.6.1",
+		"@types/mocha": "^10.0.10",
+		"@types/node": "^25.0.3",
+		"@types/vscode": "^1.107.0",
+		"@typescript-eslint/eslint-plugin": "^8.50.0",
+		"@typescript-eslint/parser": "^8.50.0",
+		"@vscode/test-cli": "^0.0.12",
+		"@vscode/test-electron": "^2.5.2",
+		"eslint": "^9.39.2",
+		"eslint-config-prettier": "^10.1.8",
+		"eslint-import-resolver-typescript": "^4.4.4",
+		"eslint-plugin-import": "^2.32.0",
+		"globals": "^16.5.0",
+		"graphql": "^16.12.0",
+		"graphql-request": "^7.4.0",
+		"npm-run-all": "^4.1.5",
+		"prettier": "^3.7.4",
+		"ts-loader": "^9.5.4",
+		"typescript": "^5.9.3",
+		"typescript-eslint": "^8.50.0",
+		"url-pattern": "^1.0.3",
+		"uuid": "^13.0.0",
+		"webpack": "^5.104.0",
+		"webpack-cli": "^6.0.1"
+	}
 }
