--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,40 +1,41 @@
 {
 	"compilerOptions": {
-		"module": "Node16",
-		"target": "ES2023",
-		"moduleResolution": "node16",
-		"outDir": "out",
+		"module": "es2020",
+		"target": "es2020",
+		"outDir": "dist",
 		"rootDir": "src",
-		"lib": [
-			"DOM",
-			"DOM.Iterable",
-			"ES2023"
-		],
 		"baseUrl": "src",
+		"moduleResolution": "bundler",
+		"esModuleInterop": true,
+		"allowSyntheticDefaultImports": true,
+		"lib": ["DOM", "DOM.Iterable", "ES2020"],
 		"paths": {
-			"@fs/*": [
-				"fs/*",
-				"fs/model/*"
-			],
-			"@commands": [
-				"commands/index.js"
-			],
-			"@commands/*": [
-				"commands/*"
-			]
+			"@models": ["models/index.ts"],
+			"@commands": ["commands/index.ts"],
+			"@client": ["client/index.ts"],
+			"@sdk": ["graphql_sdk.ts"],
+			"@log": ["log"],
+			"@global": ["global-context/index.ts"],
+			"@buttons": ["buttons.ts"]
 		},
 		"sourceMap": true,
 		"strict": true,
-		"declaration": true,
-		"declarationMap": true,
-		"incremental": true,
-		"tsBuildInfoFile": "node_modules/.cache/.tsbuildinfo",
-		"noErrorTruncation": true,
-		"plugins": [
-			{
-				"name": "@0no-co/graphqlsp",
-				"schema": "./schema.graphql"
-			}
-		]
+		"skipLibCheck": true,
+		"noErrorTruncation": true
+	},
+	"include": ["src/**/*.ts", "./node_modules/vscode/vscode.d.ts", "./node_modules/vscode/lib/*"],
+	"watchOptions": {
+		// Use native file system events for files and directories
+		"watchFile": "useFsEvents",
+		"watchDirectory": "useFsEvents",
+		// Poll files for updates more frequently
+		// when they're updated a lot.
+		"fallbackPolling": "dynamicPriority",
+		// Don't coalesce watch notification
+		"synchronousWatchDirectory": true,
+		// Finally, two additional settings for reducing the amount of possible
+		// files to track  work from these directories
+		"excludeDirectories": ["**/node_modules", "dist"],
+		"excludeFiles": []
 	}
 }
