feat: Add auto-sync on save with session management improvements
  Implements automatic template synchronization when saving linked files,
  with a configurable setting to enable/disable the feature.

  Key Changes:
  - Add SaveHandler to automatically sync templates on save
  - New setting: rewst-buddy.enableSyncOnSave (default: true)
  - Refactor session management to only persist active sessions
  - Improve session loading to handle new profiles dynamically
  - Convert template sync from editor-based to document-based
  - Add isLinked() method to TemplateLinkManager for easier link checking
  - Simplify button visibility logic using new isLinked() method
  - Change session profile storage from object to array format
  - Remove unused imports and cleanup code

  Breaking Changes:
  - Session profile storage format changed (will require re-authentication)
  - commandPrefix renamed to extPrefix for consistency

  This change streamlines the workflow by automatically pushing changes
  to Rewst when saving linked files, while maintaining sync safety checks
  to prevent accidental overwrites.

--- a/package.json
+++ b/package.json
@@ -71,6 +71,11 @@
 							"loginUrl"
 						]
 					}
+				},
+				"rewst-buddy.enableSyncOnSave": {
+					"type": "boolean",
+					"default": true,
+					"description": "Enable Sync on Save."
 				}
 			}
 		},
