--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,5 +1,6 @@
 .vscode/**
 .vscode-test/**
+.claude/**
 src/**
 .gitignore
 .yarnrc
@@ -12,3 +13,4 @@ vsc-extension-quickstart.md
 ../**
 *.code-workspace
 node_modules/**
+.nvmrc
