--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
 	"name": "rewst-buddy",
 	"displayName": "rewst-buddy",
 	"description": "Buddy for Rewst (Templates)",
-	"version": "0.19.0",
+	"version": "0.19.1",
+	"icon": "rewst-buddy.png",
 	"engines": {
 		"vscode": "^1.107.0"
 	},
