--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"name": "rewst-buddy",
 	"displayName": "rewst-buddy",
 	"description": "Buddy for Rewst (Templates)",
-	"version": "0.22.0",
+	"version": "0.22.1",
 	"icon": "media/rewst-buddy.png",
 	"engines": {
 		"vscode": "^1.107.0"
@@ -251,12 +251,16 @@
 		}
 	},
 	"scripts": {
-		"format:pretty": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\"",
+		"prepare": "husky",
+		"format:pretty": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json,md}\"",
 		"format:eslint": "eslint --fix src",
 		"format": "npm-run-all -p format:*",
 		"lint": "eslint src",
 		"type-check": "tsc --noEmit",
 		"codegen": "graphql-codegen --config src/codegen.ts",
+		"codegen:check": "npm run codegen && git diff --exit-code src/client/graphql/sdk.ts || (echo 'SDK is out of sync! Run: npm run codegen' && exit 1)",
+		"lint:staged": "lint-staged",
+		"pre-commit": "bash .husky/pre-commit",
 		"check-types": "tsc --noEmit --watch",
 		"test": "vscode-test",
 		"build": "npm run package",
@@ -293,6 +297,8 @@
 		"globals": "^16.5.0",
 		"graphql": "^16.12.0",
 		"graphql-request": "^7.4.0",
+		"husky": "^9.1.7",
+		"lint-staged": "^15.5.2",
 		"npm-run-all": "^4.1.5",
 		"prettier": "^3.7.4",
 		"ts-loader": "^9.5.4",
@@ -302,5 +308,15 @@
 		"uuid": "^13.0.0",
 		"webpack": "^5.104.0",
 		"webpack-cli": "^6.0.1"
+	},
+	"lint-staged": {
+		"src/client/graphql/sdk.ts": [],
+		"*.{ts,js,mjs,cjs}": [
+			"eslint --fix",
+			"prettier --write"
+		],
+		"*.{json,md}": [
+			"prettier --write"
+		]
 	}
 }
