--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,16 +1,37 @@
+# Development directories
 .vscode/**
 .vscode-test/**
 .claude/**
-src/**
-.gitignore
-.yarnrc
-vsc-extension-quickstart.md
-**/tsconfig.json
-**/eslint.config.mjs
-**/*.map
-**/*.ts
-**/.vscode-test.*
-../**
-*.code-workspace
+.LOCAL/**
+.husky/**
 node_modules/**
+src/**
+
+# Build and config files
+webpack.config.cjs
+tsconfig.json
+**/tsconfig.json
+eslint.config.mjs
+**/eslint.config.mjs
+.prettierignore
+.prettierrc
+.gitignore
 .nvmrc
+.yarnrc
+.editorconfig
+
+# Documentation (internal)
+CLAUDE.md
+vsc-extension-quickstart.md
+
+# Test files
+**/.vscode-test.*
+**/*.map
+
+# TypeScript source (keep only compiled)
+**/*.ts
+!**/*.d.ts
+
+# Misc
+*.code-workspace
+../**
