--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -27,6 +27,16 @@
 			"outFiles": ["${workspaceFolder}/dist/**/*.js"],
 			"sourceMaps": true,
 			"smartStep": true
+		},
+		{
+			"name": "Debug Extension Tests",
+			"type": "extensionHost",
+			"request": "launch",
+			"testConfiguration": "${workspaceFolder}/.vscode-test.mjs",
+			"args": ["--extensionDevelopmentPath=${workspaceFolder}"],
+			"outFiles": ["${workspaceFolder}/dist/**/*.js"],
+			"sourceMaps": true,
+			"smartStep": true
 		}
 	]
 }
