reduce bloat on package

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -26,7 +26,10 @@ vsc-extension-quickstart.md
 
 # Test files
 **/.vscode-test.*
-**/*.map
+
+# Only include the bundled entrypoint, exclude all other dist artifacts
+dist/**
+!dist/extension.js
 
 # TypeScript source (keep only compiled)
 **/*.ts
